--- a/Areas/Admin/Views/HomeAdmin/Index.cshtml
+++ b/Areas/Admin/Views/HomeAdmin/Index.cshtml
@@ -6,17 +6,16 @@
 <header class="py-10 mb-4 bg-gradient-primary-to-secondary">
     <div class="container-xl px-4">
         <div class="text-center">
-            <h1 class="text-white">XÉT TUYỂN ĐẠI HỌC NĂM 2023</h1>
+            <h1 class="text-white">TRANG QUẢN TRỊ HỒ SƠ XÉT TUYỂN</h1>
             <p class="lead mb-0 text-white"> Trường Đại học Hồng Đức</p>
         </div>
     </div>
 </header>
 <!-- Main page content-->
 <div class="container-xl px-4">
-    <h2 class="mt-5 mb-0">Thông tin xét tuyển</h2>
+    <h2 class="mt-5 mb-0"></h2>
     <br />
 
-    - Xét tuyển bạ, xét tuyển thi THPT
     <div class="row">
     </div>
 </div>
