#update site admin

--- a/Areas/Admin/Views/DotXetTuyens/Index.cshtml
+++ b/Areas/Admin/Views/DotXetTuyens/Index.cshtml
@@ -31,16 +31,16 @@
             <table class="table">
                 <tr>
                     <th>
-                        @Html.DisplayNameFor(model => model.NamHoc.NamHoc_Ten)
+                        Năm học
                     </th>
                     <th>
-                        @Html.DisplayNameFor(model => model.Dxt_Ten)
+                        Tên đợt
                     </th>
                     <th>
-                        @Html.DisplayNameFor(model => model.Dxt_TrangThai)
+                        Trạng thái
                     </th>
                     <th>
-                        @Html.DisplayNameFor(model => model.Dxt_GhiChu)
+                       Ghi chú
                     </th>
                     <th></th>
                 </tr>
