--- a/Areas/Admin/Views/PhuongThucXetTuyens/Index.cshtml
+++ b/Areas/Admin/Views/PhuongThucXetTuyens/Index.cshtml
@@ -31,10 +31,10 @@
             <table class="table">
                 <tr>
                     <th>
-                        @Html.DisplayNameFor(model => model.Ptxt_TenPhuongThuc)
+                        Tên phương thức
                     </th>
                     <th>
-                        @Html.DisplayNameFor(model => model.Ptxt_GhiChu)
+                        Ghi chú
                     </th>
                     <th></th>
                 </tr>
