hide unused menus

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -81,10 +81,10 @@
                             <div class="nav-link-icon"><i data-feather="grid"></i></div>
                             Đăng ký xét tuyển
                         </a>
-                        <a class="nav-link" href="charts.html">
+                        @*<a class="nav-link" href="charts.html">
                             <div class="nav-link-icon"><i data-feather="bar-chart"></i></div>
                             Hồ sơ minh chứng
-                        </a>
+                        </a>*@
                         <a class="nav-link" href="@Url.Action("Index", "KetQuaXetTuyens")">
                             <div class="nav-link-icon"><i data-feather="filter"></i></div>
                             Kết quả xét tuyển
@@ -93,10 +93,10 @@
                             <div class="nav-link-icon"><i data-feather="package"></i></div>
                             Thông tin đóng phí
                         </a>
-                        <a class="nav-link " href="#">
+                       @* <a class="nav-link " href="#">
                             <div class="nav-link-icon"><i data-feather="globe"></i></div>
                             Hướng dẫn sử dụng
-                        </a>
+                        </a>*@
 
                     </div>
                 </div>
