--- a/Views/DangKyXetTuyens/dkxthocba.cshtml
+++ b/Views/DangKyXetTuyens/dkxthocba.cshtml
@@ -371,14 +371,17 @@
                     _output += '<tr><td colspan="6"  style="text-align:center">Chưa đăng ký nguyện vọng nào!</td></tr>';
                 }
                 else {
+                    console.log(result_all, 'result_all');
+                    console.log(result_all.length, 'result_all.length');
                     $.each(result_all, function (i, result) {
+                        console.log(i, 'result');
                         _output += '<tr>' +
-                            '<td style="vertical-align: middle !important "> NV ' + result.Dkxt_NguyenVong + ' <a class="btn btn-outline-primary btn-sm">&#8743;</a>  <a class="btn btn-outline-primary btn-sm">&#8744;</a> </td>' +
+                            '<td style="vertical-align: middle !important "> NV ' + result.Dkxt_NguyenVong + `<button class="btn btn-outline-primary btn-sm" onclick="upData(${result.Dkxt_ID})" ${i == 0 ? "disabled" : ''}>  &#8743;</button> <button  class="btn btn-outline-primary btn-sm" onclick="downData(${result.Dkxt_ID})" ${i == result_all.length - 1 ? "disabled" : ""}> &#8744;</button>  </td>` +
                             '<td style="vertical-align: middle !important "> ' + result.Dkxt_TenAll.Nganh_GhiChu + ' </td>' +
                             '<td style="vertical-align: middle !important ">' + result.Dkxt_TenAll.Thm_MaTen + '</td>' +
                             '<td style="vertical-align: middle !important ">' + result.Dkxt_Diem_Tong_Full + '</td>' +
                             '<td>' + '<a href="#" class="btn btn-outline-primary" style="vertical-align: middle !important " title="Bấm chuột để xác nhận đăng ký nguyện vọng này"> <input type="checkbox" disabled /> Chưa xác nhận</a>' + '</td>' +
-                            '<td style="text-align: center; vertical-align: middle !important ">' + 'Sửa | Xóa' + '</td>' +
+                            '<td style="text-align: center; vertical-align: middle !important ">' + `<button class="btn btn-outline-danger btn-sm" onclick="deleteData(${result.Dkxt_ID})"}> Xoá</button> `  + '</td>' +
                             '</tr>'
                     });
                 }
@@ -571,4 +574,66 @@
             window.location.href = '/ExportFile/DownloadFile_XetTuyenHB';
         });
     });
+
+     function upData(value) {
+        var obj = { idDkxt: value };
+        $.ajax({
+            url: '@Url.Action("upData", "DangKyXetTuyens")',
+            type: 'POST',
+            dataType: 'json',
+            data: JSON.stringify(obj),
+            contentType: 'application/json; charset=utf-8'
+        }).done(function (response) {
+            if (response.status == true) {
+                alert(response.msg);
+                window.location.reload();
+            }
+            else {
+                alert(response.msg);
+            }
+        }).fail(function (error) {
+            alert(error.StatusText);
+        });
+    }
+    function downData(value) {
+        var obj = { idDkxt: value };
+        $.ajax({
+            url: '@Url.Action("downData", "DangKyXetTuyens")',
+            type: 'POST',
+            dataType: 'json',
+            data: JSON.stringify(obj),
+            contentType: 'application/json; charset=utf-8'
+        }).done(function (response) {
+            if (response.status == true) {
+                alert(response.msg);
+                window.location.reload();
+            }
+            else {
+                alert(response.msg);
+            }
+        }).fail(function (error) {
+            alert(error.StatusText);
+        });
+    }
+
+    function deleteData(value) {
+        var obj = { idDkxt: value };
+        $.ajax({
+            url: '@Url.Action("Delete", "DangKyXetTuyens")',
+            type: 'POST',
+            dataType: 'json',
+            data: JSON.stringify(obj),
+            contentType: 'application/json; charset=utf-8'
+        }).done(function (response) {
+            if (response.status == true) {
+                alert(response.msg);
+                window.location.reload();
+            }
+            else {
+                alert(response.msg);
+            }
+        }).fail(function (error) {
+            alert(error.StatusText);
+    });
+    }
 </script>
